1-vpc.tf
resource "aws_vpc" "ntconsult" {
  cidr_block = "10.0.0.0/16"

  # Must be enabled for EFS
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "ntconsult"
  }
}
